# bocbot-simulation

./: .gitignore  Dockerfile  README.md  run_simulation.sh
bocbot_ws/src/bocbot/: CMakeLists.txt  package.xml
bocbot_ws/src/bocbot/launch/: tour.launch.py  world.launch.py
bocbot_ws/src/bocbot/src/: autonomous_tour.py  teleop_wasd.py
bocbot_ws/src/bocbot/urdf/: bocbot.gazebo  bocbot.urdf  bocbot.urdf.xacro
bocbot_ws/src/bocbot/worlds/: boc_office.world
